Fix form of Brent's Name

--- a/skysub.tex
+++ b/skysub.tex
@@ -61,7 +61,7 @@
 \author{Roelof de Jong}
 \affil{Astrophysikalisches Institut Potsdam (AIP), An der Sternwarte 16, 14482 Potsdam, Germany}
 \and
-\author{Brent Tully}
+\author{R. Brent Tully}
 \affil{Institute for Astronomy, University of Hawaii, 2680 Woodlawn Drive, Honolulu, HI, USA}
 
 % ============================================================================
