--- a/skysub.tex
+++ b/skysub.tex
@@ -297,32 +297,61 @@ This non-repetitive sampling of sky fields yielded two possible advantages: 1) w
 \section{Image Preparation}
 \label{sec:reduction}
 
-\todo{Lots of possibility to streamline the initial stages of pipeline overview, and initial stages.}
+\begin{figure*}[t]
+\centering
+\includegraphics[width=\textwidth]{figs/pipeline_flowchart}
+\caption{Flowchart representation of the \androids\ WIRCam pipeline, from receipt of CFHT \iiwione\ data products to rendering of M31 mosaics.
+\todo{Label article sections within the flowchart (once known).}}
+\label{fig:flowchart}
+% made with Illustrator
+\end{figure*}
 
-The crux of this paper is finding how wide-field NIR mosaics can best be made with the WIRCam instrument on CFHT, and determining what limits the accuracy of our surface brightness maps.
-To begin, we note that WIRCam data are offered by CFHT in three progressive stages of \emph{preprocessing} by their \iiwione\ pipeline to allow programmes, such as this one, to re-implement calibration recipes for potentially higher surface brightness accuracy.
-The data flavours are: a raw image that is essentially untouched after leaving the instrument (\texttt{*o.fits}); an image that has been corrected for nonlinearity, dark subtracted and flat fielded (\texttt{*s.fits}); and an image that has been background subtracted, in addition to all the previous treatments (\texttt{*p.fits}).
+In this section, we introduce our data reduction pipeline for producing  with CFHT/WIRCam mosaics of M31.
+While CFHT distributes calibrated WIRCam data products, we haven chosen to replace much of their data reduction recipes with our to optimize and explore the limitations of wide-field NIR surface brightness maps.
+An overview of the pipeline is shown \Fig{flowchart}; the principle steps are 1) astrometry, 2) source masking, 3) night sky flat fielding, 4) zeropoint estimation against 2MASS sources, 5) median sky frame construction, 6) image calibration with zeropoints and median sky subtraction and 7) background optimization and mosaic production in three hierarchical steps.
 
-As background subtraction is the highest source of uncertainty in our program, the middle data product, \texttt{*s.fits}, would appear most amenable as a starting point.
+\subsection{Choice of Starting Point}
+
+CFHT offers WIRCam data in two degrees of preprocessing with the \iiwione\ pipeline: an image that has been corrected for nonlinearity, dark subtracted and flat fielded (\texttt{*s.fits}); and an image that has been background subtracted, in addition to all the previous treatments (\texttt{*p.fits}).
+In order to implement our own calibration strategy, our mosaics stem from \texttt{*s.fits} products (though we note that \texttt{*p.fits} products are still used for astrometry and source masking, see below).
 Nonetheless, two \iiwione\ processing stages included in \texttt{*s.fits} products must be handled carefully.
 
 \paragraph{Cross-talk correction} WIRCam integrations prior to March 2008 (includes the 2007B data set, not the 2009B data) suffered from electronic cross talk within the detector.
 This cross talk is manifested in repeating rings above and below saturated stars.\footnote{See \url{http://cfht.hawaii.edu/Instruments/Imaging/WIRCam/WIRCamCrosstalks.html}.}
 By default, the \iiwione\ pipeline removes this cross talk by subtracting a median of the 32 amplifier slices.
 Unfortunately, this algorithm fails in cases where the background has a surface brightness gradient (such as on the disk of M31) and produces an brightness gradient that is stronger than the galaxy surface brightness itself.
-Loic Albert (then at CFHT) kindly re-processed our 2007B data set with the cross-talk correction turned off.
+Loic Albert (then at CFHT) kindly re-processed our 2007B data set with the cross-talk correction omitted.
 
-\paragraph{Flat fielding} \todo{Need to explain that our sky flats are the correct approach}. We discovered that the dome flat fielding offered by \iiwione\ was only accurate to 2\% of edge-to-edge intensity.
-The ineffectiveness of WIRCam dome flat fielding is evident in \texttt{*s.fits} images that show significant detector structure, despite having been flat fielded.
-An example of this structure is related to the different gain structures of the 32 amplifiers that service independent horizontal bands across each WIRCam detector (see \Fig{flattenedimage_comparison})---a proper flat field capture such gain structure for proper photometry.
-Users of fully-processed \iiwione\ \texttt{*p.fits} images do not directly notice the unsuitability of dome flats since images of the detector gain structure embedded in the background are \textit{subtracted} from the signal as part of the median background subtraction step.
-Yet since pixel gain changes the signal in proportion to incident flux, subtraction is fundamentally the wrong operation to use.
-\todo{Argue here that these effects are proportional. Or can we even say? since they are at the level of the background.}
-Our remedy is to adopt night sky flats, which use the median night sky as the illumination reference rather than a dome lamp.
-The profound difference between dome or night sky flats is shown in \Fig{domeflatratio}.
-Our confidence in night sky flats as the \textit{correct} choice for flat fielding WIRCam lies in their ability to remove both large scale illumination features (see \Sec{skyflatstability}) and pixel-to-pixel gain changes across WIRCam (\eg \Fig{flattenedimage_comparison}).
-Production of WIRCam sky flats is subtle as we find the flat field structure to be time dependent on sub-hour scales, and the NIR night sky itself is not flat either.
-A comprehensive discussion of WIRCam flat fielding is presented in \Sec{skyflatstability}.
+\paragraph{Flat fielding} A pecularity of \texttt{*s.fits} images is that even though they are flat fielded using dome flats as CFHT, those products still exhibit strong non-uniformity, dust artifacts and surface defects.
+Dome flats may not be appropriate for flat fielding NIR sources since optical path and color of light may not match that of the NIR skyglow and stars---the principle content of an astronomical NIR observation.
+As we show in later sections, WIRCam images can be flat fielded using night sky flats.
+We give a visual demonstration of the superiority of night sky flat fielding in \Fig{flattenedimage_comparison}: surface defects left by dome flat fielding are removed with night sky flat fielding.
+
+One interesting feature of \texttt{*s.fits} images is the appearance of horizontal banding corresponding to the 32 amplfiers that service independent horizontal bands of each WIRCam detector (seen in \Fig{flattenedimage_comparison}).
+It is odd that a dome flat failed to calibrate such electronic structures in a detector, and one might expect that the such banding should be calibrated with an additive correction.
+Indeed, this banding is absent of fully-processed \iiwione\ images due to median sky frame \textit{subtraction}.
+However, we maintain that the flat fielding is the correct treatment for these structures since they appear to be proportional to the skyglow background throughout the night (which can vary by 10\% during a night), yet are still corrected with a single night sky flat.
+
+Our \androids\ pipeline thus begins with \texttt{*s.fits} data that have been \textit{uncorrected} for dome flat fielding.
+That is, we multiply the \texttt{*s.fits} image with its associated dome flat.\footnote{Dome and twilight flats are made available by CFHT, \url{http://limu.cfht.hawaii.edu:80/detrend/wircam/}.}
+The result is an image that retains \iiwione's prescription for dark subtraction, bad pixel masking and non-linearity correction, ready for our own sky flat fielding (to be described in \Sec{flats}).
+
+\subsection{Astrometry}
+
+Early in the pipeline we build a unified astrometric frame for our image set using \sw{SCAMP} \citep{Bertin:2006}.
+\sw{SCAMP} matches stars in \sw{Source Extractor} \citep{Bertin:1996} catalogs of each WIRCam frame both internally (to $\sigma_\mathrm{int}=0\farcs 10$), and against the 2MASS Point Source Catalog \citep{Skrutskie:2006} to a precision of $\sigma_\mathrm{ref}=0 \farcs 15$.
+% Values obtained from Scamp XML output
+By processing all 4286 frames in the \androids /WIRCam survey simultaneously, \sw{SCAMP} allows an accurate and internally consistent coordinate frame for our mosaic.
+\sw{SCAMP} handles this data volume gracefully provided we cull the input star catalogs for stars with $S/N > 100$, and by using the \texttt{SAME\_CRVAL} astrometry assumption that the WIRCam focal plane geometry is stable.
+Also note that we build our \sw{Source Extractor} catalogs using the fully-processed \texttt{*p.fits} \iiwione\ images since those are adequate for source detection and astrometry.
+While \sw{SCAMP} is capable of also fitting a photometric solution for each frame, we choose to establish photometric zeropoints later in our pipeline using a combination of background flux observed across the detector array, and bootstrapping against 2MASS sources observed in uncrowded 2MASS images.
+
+\subsection{Non-Sky Pixel Masking}
+
+A second preliminary pipeline stage is source masking.
+For each sky image we build masks that yield only blank pixels to aide with background level estimation, sky flat construction (\Sec{flats}) and median sky frame construction (\Sec{mediansky}).
+These masks are built by a combination of \sw{Source Extractor} object maps (detected in \texttt{*p.fits} images) and hand-drawn polygon regions that cover the diffraction spikes and halos of very bright foreground stars.
+These masks, along with the \iiwione\ bad pixel mask, are combined with \sw{WeightWatcher} \citep{Marmo:2008}.
 
 \begin{figure}[t]
 \centering
@@ -345,42 +374,6 @@ Using the median night sky illumination over a WIRCam queue run, rather than a d
 \label{fig:domeflatratio}
 % made with wircam/skyflat/plot/flatratio.py
 \end{figure}
-
-\vspace{1em}
-
-Our \androids\ pipeline thus begins with \texttt{*s.fits} data that have been uncorrected for dome flat fielding.
-That is, we multiply the \texttt{*s.fits} image with its associated dome flat.\footnote{Dome and twilight flats are made available by CFHT, \url{http://limu.cfht.hawaii.edu:80/detrend/wircam/}.}
-The result is an image that retains \iiwione's prescription for dark subtraction, bad pixel masking and non-linearity correction.
-The \androids\ WIRCam pipeline then follows the steps described below.
-
-\subsection{Reduction outline}
-\label{sec:reduction_outline}
-
-\begin{figure*}[t]
-\centering
-\includegraphics[width=\textwidth]{figs/pipeline_flowchart}
-\caption{Flowchart representation of the \androids\ WIRCam pipeline, from receipt of CFHT \iiwione\ data products to rendering of M31 mosaics.
-\todo{Label article sections within the flowchart (once known).}}
-\label{fig:flowchart}
-% made with Illustrator
-\end{figure*}
-
-An overview of the \androids\/WIRCam pipeline is illustrated in \Fig{flowchart}.
-In words, our reductions begin by unifying the World Coordinate System across the dataset with \sw{SCAMP} \citep{Bertin:2006}.
-Scamp matches stars in Source Extractor \citep{Bertin:1996} catalogs of each WIRCam \texttt{*p.fits} frame both internally (to $\sigma_\mathrm{int}=0\farcs 10$), and against the 2MASS Point Source Catalog \citep{Skrutskie:2006} to a precision of $\sigma_\mathrm{ref}=0 \farcs 15$.
-% Values obtained from Scamp XML output
-By processing all 4286 frames in the \androids /WIRCam survey simultaneously, \sw{SCAMP} allows an accurate and internally consistent coordinate frame for our mosaic.
-\sw{SCAMP} handles this data volume gracefully provided we cull the input star catalogs for stars with $S/N > 100$, and by using the \texttt{SAME\_CRVAL} astrometry assumption that the WIRCam focal plane geometry is stable.
-
-The next steps are flat fielding and median background subtraction.
-For flat fielding, we apply flat field frames built from sky images (sky flats), as opposed to the dome flats and twilight sky flats employed in the \iiwione\ pipeline.
-As we explore thoroughly in Section~\ref{sec:flats} and again in Section~\ref{sec:skyflatstability}, sky flats are crucial for tracking flat field evolution in the WIRCam detector.
-Next, our pipeline performs preliminary background subtraction using medians of sky images, as described in Section~\ref{sec:mediansky}.
-Since we apply a new flat field recipe, our pipeline also re-estimates photometric zeropoints by bootstrapping directly against the 2MASS Point Source Catalog; this operation is described in Section~\ref{sec:photocal}.
-
-Finally, while the data have formally been flat fielded and photometrically calibrated, the background level estimation provided by the sky-target nodding observing scheme is not accurate enough to build a seamless mosaic.
-Instead we model sky offsets that enforce internal consistency in the background levels of target frames.
-In Section~\ref{sec:scalar} we discuss the methods for modelling these sky offsets and provide an analysis of their amplitudes in  Section~\ref{sec:scalaranalysis}.
 
 \section{Sky Flat Fielding}
 \label{sec:flats}
