Change to start of reduction section

--- a/skysub.tex
+++ b/skysub.tex
@@ -306,8 +306,7 @@ This non-repetitive sampling of sky fields yielded two possible advantages: 1) w
 % made with Illustrator
 \end{figure*}
 
-In this section, we introduce our data reduction pipeline for producing  with CFHT/WIRCam mosaics of M31.
-While CFHT distributes calibrated WIRCam data products, we haven chosen to replace much of their data reduction recipes with our to optimize and explore the limitations of wide-field NIR surface brightness maps.
+While CFHT distributes calibrated WIRCam data products, we haven chosen to replace much of their data reduction recipes with our own to optimize and explore the limitations of wide-field NIR surface brightness maps.
 An overview of the pipeline is shown \Fig{flowchart}; the principle steps are 1) astrometry, 2) source masking, 3) night sky flat fielding, 4) zeropoint estimation against 2MASS sources, 5) median sky frame construction, 6) image calibration with zeropoints and median sky subtraction and 7) background optimization and mosaic production in three hierarchical steps.
 
 \subsection{Choice of Starting Point}
