--- a/skysub.tex
+++ b/skysub.tex
@@ -322,11 +322,24 @@ Unfortunately, this algorithm fails in cases where the background has a surface 
 Loic Albert (then at CFHT) kindly re-processed our 2007B data set with the cross-talk correction omitted.
 
 \paragraph{Flat fielding} A pecularity of \texttt{*s.fits} images is that even though they are flat fielded using dome flats as CFHT, those products still exhibit strong non-uniformity, dust artifacts and surface defects.
-Dome flats may not be appropriate for flat fielding NIR sources since optical path and color of light may not match that of the NIR skyglow and stars---the principle content of an astronomical NIR observation.
-As we show in later sections, WIRCam images can be flat fielded using night sky flats.
+% From CFHT website on Dome Flats
+% We are using dome flats obtained at the beginning of each observing run on the observatory dome illuminated with a tungsten lamp. We obtain a cube of 15 raw flats with the dome light turned on and subtract the 15 raw flats of the same exposure time with the light turned off. This ensures any instrumental thermal component is removed. We typically use 5-6 second exposure times for wide band filters and up to 30 second exposure times for narrow band filters and target fluxes of about 10000 adu on lamp-on flats.
+%
+% Here is how dome flats are processed:
+%
+% Each detector is treated entirely independantly.
+% All raw flats (lamp on and off) are multiplied by the bad pixel mask, subtracted by their corresponding dark, and the background level is measured using a simple median.
+% Flat-off. Some flat-off images are rejected when their background level is different by more than 1% compared to the others, or when more than 3 sigma off the others. Then the flat-off images are normalized to 1, a cube is created and the median (through dimension 3) is obtained. Finally, the median flat-off image is multiplied back by the median of all initial background levels.
+% Flat-on. Each flat-on has the final flat-off subtracted from it. Then the same rejection criteria as for flat-off images are used. Then all flat-on images are normalized to one before being put in a cube. Finally, the median of the cube is obtained (through the third dimension). This produces the final processed dome flat image.
+% Flat fields show mostly a radially increasing flux level and, fortunately, no high spatial frequency fringes. The pixel to pixel quantum efficieciency variations are of the order of a few percents.
+We note that CFHT produces dome flats (for each queue run) from median stacks of 15 images taken under a tungsten lamp, subtracted from images of the same integration time taken with the lamp off.
+This procedure should remote the additive thermal background from the flat, ensuring that the flat field is a purely multiplicative calibration.
+Despite this, the presence of dust artifacts betrays the fact that dome flats do not calibrate the same illumination pattern as sky photons.
+Similarly, the presence of surface defects in dome-calibrated images could be caused by disparities in both the optical path and the colour of the tungsten lamp versus the night sky background.
+In this work, we find that WIRCam images can be adequately flat fielded using night sky flats.
 We give a visual demonstration of the superiority of night sky flat fielding in \Fig{flattenedimage_comparison}: surface defects left by dome flat fielding are removed with night sky flat fielding.
 
-One interesting feature of \texttt{*s.fits} images is the appearance of horizontal banding corresponding to the 32 amplfiers that service independent horizontal bands of each WIRCam detector (seen in \Fig{flattenedimage_comparison}).
+One interesting feature of \texttt{*s.fits} images is the appearance of horizontal banding corresponding to the 32 amplifiers that service independent horizontal bands of each WIRCam detector (seen in \Fig{flattenedimage_comparison}).
 It is odd that a dome flat failed to calibrate such electronic structures in a detector, and one might expect that the such banding should be calibrated with an additive correction.
 Indeed, this banding is absent of fully-processed \iiwione\ images due to median sky frame \textit{subtraction}.
 However, we maintain that the flat fielding is the correct treatment for these structures since they appear to be proportional to the skyglow background throughout the night (which can vary by 10\% during a night), yet are still corrected with a single night sky flat.
@@ -374,15 +387,32 @@ Using the median night sky illumination over a WIRCam queue run, rather than a d
 % made with wircam/skyflat/plot/flatratio.py
 \end{figure}
 
-\section{Sky Flat Fielding}
+\section{Sky Flat Fielding and Median Sky Subtraction}
 \label{sec:flats}
 
-Dome flats fail to properly calibrate WIRCam data, as evidenced by Figs.~\ref{fig:flattenedimage_comparison}~and~\ref{fig:domeflatratio}.
-Sky flats are an appropriate alternative, both because of the abundant background (any NIR imaging program can use its own images to build sky flats), and because sky flats more aptly trace detector illumination and gain structure.
-The former because skylight traces the same optical path as astronomical sources; the latter because WIRCam's gain structure appears variable.
-\todo{Re-think the argument that the gain structure is variable.}
-Sky flats allow detector gain mapping in real-time.
-We return to the variability of WIRCam flat fields in Section~\ref{sec:skyflatstability}.
+As we mentioned previously in \Sec{reduction_outline}, dome flats fail to properly calibrate WIRCam data (see \Fig{flattenedimage_comparison}).
+Sky flats are an appropriate alternative, both because of the abundant background (any NIR imaging program can use its own images to build sky flats), and because sky flats directly match the illumination path and colour of observations.
+Sky flats also have the advantage of being contemporaneous with observations: if the WIRCam flat field is variable, the sky flats can be built to track such variability.
+This is a distinct advantage over dome flats, which CFHT builds at the beginning of every WIRCam queue run, or even twilight flats that can only be built once per night.
+% A focus of this section will be devoted to identifying intrinsic variability in the WIRCam flat field.
+% We return to the variability of WIRCam flat fields in Section~\ref{sec:skyflatstability}.
+
+Despite these advantages, sky flats are built on two assumptions that limit their accuracy.
+First, we must assume that atmospheric sky glow is uniform across the detectors.
+Second, we assume that all flux in a \emph{dark subtracted} frame is proportional to the intrinsic flat field function.
+The latter is intrinsically false: wide-field images of the near-infrared night sky show that sky glow has rich spatial and temporal variations.
+This effect can be negated by marginalizing over a large number of sky images.
+The 2009B observing program even took this marginalization process further by sampling pseudo-random sites on the sky while building sky flats.
+% TODO talk about thermal component now.
+% A flaw of sky flat fielding is that thermal background from the telescope and detector cannot be separated from illumination on the chip (unlike in the lamp on/off dome flat procedure).
+Ideally, one would subtract any thermal background from sky images before constructing a sky flat frame, but this cannot be done.
+Thus sky flat fielding implicitly makes the naive assumption that all background signal in a blank sky image is proportional to the WIRCam flat field function.
+% what about darks? don't darks remove a majority of the thermal background?
+% also what about flattness of the sky background?
+
+The one degree of control that can be exerted over sky flat construction is the time window that sky images are drawn from.
+Using wide window, the length of a queue observing run, asserts confidence that the intrinsic WIRCam flat field function is stable over several days.
+Such a window also 
 
 \subsection{Sky Flat Designs}
 \label{sec:flatdesign}
